destructure data for cart and add endpoint docs for getcartbyid
